@@ -6,6 +6,7 @@ import org.example.schema.DatabaseSchema;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
@@ -19,12 +20,11 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class BranchForkTest {
     @Test
-    void startsSharedPostgresForksTheParentBranchDatabasesAndPrintsStatus() {
+    void startsSharedPostgresCreatesTheBranchDatabaseAndPrintsStatus() {
         RecordingRunner runner = new RecordingRunner(new CommandResult(1, "No such container"), new CommandResult(0, "container-id"));
         RecordingConnectorFactory connectorFactory = new RecordingConnectorFactory();
         FakeMetadataStore metadataStore = new FakeMetadataStore();
         metadataStore.seedBranch("main");
-        metadataStore.seedDatabase("main", new BranchDatabase("orders", "main_orders"));
         BranchFork branchFork = new BranchFork(runner, connectorFactory, metadataStore);
 
         BranchForkResult result = branchFork.fork("main", "feature/orders");
@@ -32,24 +32,16 @@ class BranchForkTest {
         assertEquals("main", result.fromBranch());
         assertEquals("feature/orders", result.currentBranch());
         assertEquals("postgres-branches-scratchpad", result.containerName());
-        assertEquals(List.of("feature_orders_postgres", "feature_orders_orders"), result.databaseNames());
+        assertEquals("feature_orders_postgres", result.databaseName());
         assertEquals(2, runner.commands.size());
         assertEquals(List.of("docker", "inspect", "--format", "{{.State.Running}}", "postgres-branches-scratchpad"), runner.commands.getFirst());
         assertEquals(List.of("docker", "run", "--detach", "--name", "postgres-branches-scratchpad"), runner.commands.get(1).subList(0, 5));
         assertEquals(List.of("--publish", "55432:5432"), runner.commands.get(1).subList(5, 7));
 
-        assertEquals(2, connectorFactory.executed.size());
+        assertEquals(1, connectorFactory.executed.size());
         assertEquals("postgres", connectorFactory.executed.get(0)[0]);
-        assertEquals("CREATE DATABASE \"feature_orders_postgres\" WITH TEMPLATE \"postgres\"", connectorFactory.executed.get(0)[1]);
-        assertEquals("postgres", connectorFactory.executed.get(1)[0]);
-        assertEquals("CREATE DATABASE \"feature_orders_orders\" WITH TEMPLATE \"main_orders\"", connectorFactory.executed.get(1)[1]);
-
-        assertEquals(1, metadataStore.createBranchCalls.size());
-        assertEquals("feature/orders", metadataStore.createBranchCalls.getFirst()[0]);
-        assertEquals("main", metadataStore.createBranchCalls.getFirst()[1]);
-        assertEquals(1, metadataStore.recordDatabasesCalls.size());
-        assertEquals("feature/orders", metadataStore.recordDatabasesCalls.getFirst()[0]);
-        assertEquals(List.of(new BranchDatabase("orders", "feature_orders_orders")), metadataStore.recordDatabasesCalls.getFirst()[1]);
+        assertEquals("CREATE DATABASE \"feature_orders_postgres\"", connectorFactory.executed.get(0)[1]);
+        assertTrue(metadataStore.stagedChangesets.isEmpty());
     }
 
     @Test
@@ -68,36 +60,60 @@ class BranchForkTest {
         RecordingConnectorFactory connectorFactory = new RecordingConnectorFactory();
         FakeMetadataStore metadataStore = new FakeMetadataStore();
         metadataStore.seedBranch("main");
-        metadataStore.seedDatabase("main", new BranchDatabase("payments", "main_payments"));
         BranchFork branchFork = new BranchFork(runner, connectorFactory, metadataStore);
 
         BranchForkResult result = branchFork.fork("main", "feature/payments");
 
         assertEquals("postgres-branches-scratchpad", result.containerName());
-        assertEquals(List.of("feature_payments_postgres", "feature_payments_payments"), result.databaseNames());
+        assertEquals("feature_payments_postgres", result.databaseName());
         assertEquals(1, runner.commands.size());
         assertTrue(runner.commands.stream().noneMatch(command -> command.contains("run")));
-        assertEquals(2, connectorFactory.executed.size());
-        assertEquals("CREATE DATABASE \"feature_payments_postgres\" WITH TEMPLATE \"postgres\"", connectorFactory.executed.get(0)[1]);
-        assertEquals("CREATE DATABASE \"feature_payments_payments\" WITH TEMPLATE \"main_payments\"", connectorFactory.executed.get(1)[1]);
+        assertEquals("CREATE DATABASE \"feature_payments_postgres\"", connectorFactory.executed.get(0)[1]);
     }
 
     @Test
-    void forksOnlyTheDefaultPostgresDatabaseWhenTheParentBranchHasNoneRegistered() {
+    void recreatesTheBranchDatabaseByReplayingTheParentsCommitHistory() {
         RecordingRunner runner = new RecordingRunner(new CommandResult(0, "true"));
         RecordingConnectorFactory connectorFactory = new RecordingConnectorFactory();
         FakeMetadataStore metadataStore = new FakeMetadataStore();
         metadataStore.seedBranch("main");
+        metadataStore.seedCommitHistory("main",
+                "CREATE TABLE orders (id INT PRIMARY KEY);",
+                "ALTER TABLE orders ADD COLUMN total NUMERIC(10,2) NOT NULL;");
         BranchFork branchFork = new BranchFork(runner, connectorFactory, metadataStore);
 
-        BranchForkResult result = branchFork.fork("main", "feature/empty");
+        BranchForkResult result = branchFork.fork("main", "feature/orders");
 
-        assertEquals(List.of("feature_empty_postgres"), result.databaseNames());
-        assertEquals(1, connectorFactory.executed.size());
-        assertEquals("CREATE DATABASE \"feature_empty_postgres\" WITH TEMPLATE \"postgres\"", connectorFactory.executed.get(0)[1]);
-        assertEquals(1, metadataStore.createBranchCalls.size());
-        assertEquals(1, metadataStore.recordDatabasesCalls.size());
-        assertEquals(List.of(), metadataStore.recordDatabasesCalls.getFirst()[1]);
+        assertEquals("feature_orders_postgres", result.databaseName());
+        assertEquals(3, connectorFactory.executed.size());
+        assertEquals("postgres", connectorFactory.executed.get(0)[0]);
+        assertEquals("CREATE DATABASE \"feature_orders_postgres\"", connectorFactory.executed.get(0)[1]);
+        assertEquals("feature_orders_postgres", connectorFactory.executed.get(1)[0]);
+        assertEquals("CREATE TABLE orders (id INT PRIMARY KEY);", connectorFactory.executed.get(1)[1]);
+        assertEquals("feature_orders_postgres", connectorFactory.executed.get(2)[0]);
+        assertEquals("ALTER TABLE orders ADD COLUMN total NUMERIC(10,2) NOT NULL;", connectorFactory.executed.get(2)[1]);
+
+        assertEquals(2, metadataStore.stagedChangesets.size());
+        assertEquals("feature/orders", metadataStore.stagedChangesets.get(0)[0]);
+        assertEquals("CREATE TABLE orders (id INT PRIMARY KEY);", metadataStore.stagedChangesets.get(0)[1]);
+        assertEquals("feature/orders", metadataStore.stagedChangesets.get(1)[0]);
+        assertEquals("ALTER TABLE orders ADD COLUMN total NUMERIC(10,2) NOT NULL;", metadataStore.stagedChangesets.get(1)[1]);
+        assertEquals(2, metadataStore.markAppliedCalls.size());
+        assertEquals(2, metadataStore.commitCalls.size());
+    }
+
+    @Test
+    void refusesToForkWhenTheBranchAlreadyExists() {
+        RecordingRunner runner = new RecordingRunner(new CommandResult(0, "true"));
+        FakeMetadataStore metadataStore = new FakeMetadataStore();
+        metadataStore.seedBranch("main");
+        metadataStore.seedBranch("feature/orders");
+        BranchFork branchFork = new BranchFork(runner, new RecordingConnectorFactory(), metadataStore);
+
+        BranchForkException exception = assertThrows(BranchForkException.class, () -> branchFork.fork("main", "feature/orders"));
+
+        assertTrue(exception.getMessage().contains("Branch already exists: feature/orders"));
+        assertTrue(runner.commands.isEmpty());
     }
 
     @Test
@@ -118,20 +134,6 @@ class BranchForkTest {
         assertEquals(List.of("feature_orders_postgres"), connectorFactory.connections);
     }
 
-    @Test
-    void refusesToForkWhenTheBranchAlreadyExists() {
-        RecordingRunner runner = new RecordingRunner(new CommandResult(0, "true"));
-        FakeMetadataStore metadataStore = new FakeMetadataStore();
-        metadataStore.seedBranch("main");
-        metadataStore.seedBranch("feature/orders");
-        BranchFork branchFork = new BranchFork(runner, new RecordingConnectorFactory(), metadataStore);
-
-        BranchForkException exception = assertThrows(BranchForkException.class, () -> branchFork.fork("main", "feature/orders"));
-
-        assertTrue(exception.getMessage().contains("Branch already exists: feature/orders"));
-        assertTrue(runner.commands.isEmpty());
-    }
-
     private static final class RecordingRunner implements CommandRunner {
         private final List<CommandResult> results;
         private final List<List<String>> commands = new ArrayList<>();
@@ -149,16 +151,23 @@ class BranchForkTest {
 
     private static final class FakeMetadataStore implements BranchMetadataStore {
         private final Set<String> branches = new LinkedHashSet<>();
-        private final Map<String, List<BranchDatabase>> databasesByBranch = new HashMap<>();
+        private final Map<String, List<ChangeSet>> commitHistoryByBranch = new HashMap<>();
         private final List<String[]> createBranchCalls = new ArrayList<>();
-        private final List<Object[]> recordDatabasesCalls = new ArrayList<>();
+        private final List<Object[]> stagedChangesets = new ArrayList<>();
+        private final List<Long> markAppliedCalls = new ArrayList<>();
+        private final List<Object[]> commitCalls = new ArrayList<>();
+        private long nextId = 100;
 
         void seedBranch(String branch) {
             branches.add(branch);
         }
 
-        void seedDatabase(String branch, BranchDatabase database) {
-            databasesByBranch.computeIfAbsent(branch, key -> new ArrayList<>()).add(database);
+        void seedCommitHistory(String branch, String... ddls) {
+            List<ChangeSet> history = new ArrayList<>();
+            for (String ddl : ddls) {
+                history.add(new ChangeSet(nextId++, branch, ddl, ChangesetStatus.COMMIT, Instant.now()));
+            }
+            commitHistoryByBranch.put(branch, history);
         }
 
         @Override
@@ -173,23 +182,30 @@ class BranchForkTest {
         }
 
         @Override
-        public List<BranchDatabase> databasesForBranch(String branch) {
-            return databasesByBranch.getOrDefault(branch, List.of());
+        public long stageChangeset(String branch, String ddl) {
+            stagedChangesets.add(new Object[] {branch, ddl});
+            return nextId++;
         }
 
         @Override
-        public void recordDatabases(String branch, List<BranchDatabase> databases) {
-            recordDatabasesCalls.add(new Object[] {branch, databases});
-            databasesByBranch.put(branch, databases);
+        public void markApplied(long changesetId) {
+            markAppliedCalls.add(changesetId);
         }
 
         @Override
-        public void recordChangeset(ChangeSet changeset) {
-        }
-
-        @Override
-        public List<String> changesetsForBranch(String branch) {
+        public List<ChangeSet> changesetsForBranch(String branch) {
             return List.of();
+        }
+
+        @Override
+        public List<ChangeSet> commitHistory(String branch) {
+            return commitHistoryByBranch.getOrDefault(branch, List.of());
+        }
+
+        @Override
+        public long commit(String branch, List<Long> changesetIds) {
+            commitCalls.add(new Object[] {branch, changesetIds});
+            return nextId++;
         }
     }
 
